force-app/main/default/objects/Packages_Required_to_Complete_Order__c/Packages_Required_to_Complete_Order__c.object-meta.xml
<CustomObject>
    <label>Packages Required to Complete Order</label>
    <nameField>
        <displayFormat>Units-{00}</displayFormat>
        <label>Packages Required to Complete Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages Required to Complete Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>