force-app/main/default/objects/Packages_Required_to_Complete_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Packages Required to Complete Order</relationshipLabel>
    <relationshipName>Packages_Required_to_Complete_Order</relationshipName>
    <type>Lookup</type>
</CustomField>