force-app/main/default/objects/Packages_Required_to_Complete_Order__c/fields/Product_being_Sold__c.field-meta.xml
<CustomField>
    <fullName>Product_being_Sold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product being Sold</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Packages Required to Complete Order</relationshipLabel>
    <relationshipName>Packages_Required_to_Complete_Order</relationshipName>
    <type>Lookup</type>
</CustomField>