force-app/main/default/objects/Packages_Required_to_Complete_Order__c/fields/Total_Number_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Packages__c</fullName>
    <formula>Total_Number_of_Units__c / Units_per_Package__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Packages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>