force-app/main/default/objects/Packages_Required_to_Complete_Order__c/fields/Total_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Units__c</fullName>
    <label>Total Number of Units</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>