force-app/main/default/objects/Packages_Required_to_Complete_Order__c/fields/Units_per_Package__c.field-meta.xml
<CustomField>
    <fullName>Units_per_Package__c</fullName>
    <label>Units per Package</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>